@@ -56,6 +56,7 @@ Revision history for TAP-Parser
     - Added PERLLIB to libraries stripped in _default_inc [12030]
     - Our version of prove now handles directories containing circular
       links correctly [21938]
+    - Set TAP_VERSION env var in Parser [11595]
       
 0.51 12 March 2007
     - 'execrc' file now allows 'regex' matches for tests.
